[gd_scene load_steps=2 format=3 uid="uid://dch32qqnpfm05"]

[ext_resource type="Script" path="res://addons/bpb_quest_editor/quest_panel.gd" id="1_5oxm4"]

[node name="quest_panel" type="PanelContainer"]
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_5oxm4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="btn_add" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="le_quest_name" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="btn_save" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " Save New Quest"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="vbox_quest_list" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="timer_save" type="Timer" parent="."]
one_shot = true

[connection signal="button_down" from="VBoxContainer/HBoxContainer/btn_add" to="." method="_on_btn_add_button_down"]
[connection signal="text_submitted" from="VBoxContainer/HBoxContainer/le_quest_name" to="." method="_on_le_quest_name_text_submitted"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/btn_save" to="." method="_on_btn_save_button_down"]
[connection signal="timeout" from="timer_save" to="." method="_on_timer_save_timeout"]
